--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -29,6 +29,7 @@
 		"@crowdin/ota-client": "1.0.0",
 		"@emotion/react": "11.11.1",
 		"@emotion/server": "11.11.0",
+		"@hookform/resolvers": "3.2.0",
 		"@iconify/react": "4.1.1",
 		"@mantine/carousel": "6.0.19",
 		"@mantine/core": "6.0.19",
@@ -107,11 +108,14 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-error-boundary": "4.0.11",
+		"react-hook-form": "7.45.4",
+		"react-hook-form-mantine": "2.0.0",
 		"react-i18next": "13.1.2",
 		"tslog": "4.9.1",
 		"zod": "3.22.2"
 	},
 	"devDependencies": {
+		"@hookform/devtools": "4.3.1",
 		"@playwright/test": "1.37.1",
 		"@prisma/nextjs-monorepo-workaround-plugin": "5.1.1",
 		"@tanstack/react-query-devtools": "4.33.0",
