--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,7 +43,6 @@
 		"localized-address-format": "1.3.1",
 		"nextjs-routes": "2.0.1",
 		"probe-image-size": "7.2.3",
-		"react-error-boundary": "4.0.11",
 		"react-phone-number-input": "3.3.4",
 		"react-string-replace": "1.1.1"
 	},
@@ -57,7 +56,10 @@
 		"@emotion/server": "11.11.0",
 		"@faker-js/faker": "8.0.2",
 		"@geometricpanda/storybook-addon-badges": "2.0.0",
+		"@hookform/devtools": "4.3.1",
+		"@hookform/resolvers": "3.2.0",
 		"@iconify-json/carbon": "1.1.20",
+		"@iconify-json/fluent-mdl2": "1.1.3",
 		"@iconify-json/mdi": "1.1.54",
 		"@iconify-json/ph": "1.1.6",
 		"@iconify-json/simple-icons": "1.1.67",
@@ -151,6 +153,9 @@
 		"react": "18.2.0",
 		"react-docgen-typescript": "2.2.2",
 		"react-dom": "18.2.0",
+		"react-error-boundary": "4.0.11",
+		"react-hook-form": "7.45.4",
+		"react-hook-form-mantine": "2.0.0",
 		"react-hook-tracer": "1.4.0",
 		"react-i18next": "13.1.2",
 		"resolve-url-loader": "5.0.0",
@@ -172,8 +177,9 @@
 	"peerDependencies": {
 		"@emotion/react": "^11",
 		"@emotion/server": "^11",
-		"@iconify-json/carbon": "1.1.20",
-		"@iconify-json/simple-icons": "1.1.67",
+		"@hookform/resolvers": "^3.2.0",
+		"@iconify-json/carbon": "^1.1.20",
+		"@iconify-json/simple-icons": "^1.1.67",
 		"@iconify/react": "^4",
 		"@iconify/utils": "^2",
 		"@mantine/carousel": "^6",
@@ -195,9 +201,9 @@
 		"@tiptap/extension-link": "^2.0.0",
 		"@tiptap/react": "^2.0.0",
 		"@tiptap/starter-kit": "^2.0.0",
-		"@trpc/client": "10.37.1",
-		"@trpc/next": "10.37.1",
-		"@trpc/react-query": "10.37.1",
+		"@trpc/client": "^10.37.1",
+		"@trpc/next": "^10.37.1",
+		"@trpc/react-query": "^10.37.1",
 		"@weareinreach/api": "*",
 		"@weareinreach/auth": "*",
 		"dayjs": "^1",
@@ -212,6 +218,9 @@
 		"next-i18next": "^14.0.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-error-boundary": "^4",
+		"react-hook-form": "^7.45.4",
+		"react-hook-form-mantine": "^2.0.0",
 		"react-i18next": "^13.0.0"
 	},
 	"msw": {
